cmake_minimum_required(VERSION 3.17)
project(C__project)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__project "01 优先队列.cpp" "02 DFS例题1.cpp" "03 DFS例题2.cpp" "04 利用栈计算中缀表达式.cpp" "05 BFS.cpp" "06 二叉树.cpp" "08 并查集--好朋友.cpp" "递归 - 8皇后的问题（全排列）.cpp" "09 AVL.cpp" "10 堆排序.cpp" "11 求哈夫曼树的带权路径长度.cpp" "12 图遍历.cpp")